--- a/index.html
+++ b/index.html
@@ -4,10 +4,149 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Healing with Meditation</title>
-    <link rel="stylesheet" href="styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;700&display=swap" rel="stylesheet">
+    <style>
+        :root {
+            --neon-blue: #00f3ff;
+            --neon-pink: #ff00ff;
+            --dark-bg: #0a0a0a;
+            --glass-bg: rgba(255, 255, 255, 0.1);
+        }
+
+        body {
+            font-family: 'Space Grotesk', sans-serif;
+            background: var(--dark-bg);
+            color: #fff;
+            margin: 0;
+            padding: 0;
+            line-height: 1.6;
+        }
+
+        header {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            min-height: 30vh;
+            text-align: center;
+            background: linear-gradient(135deg, var(--neon-blue), var(--neon-pink));
+            color: white;
+            padding: 2rem;
+            position: relative;
+            overflow: hidden;
+        }
+
+        header h1 {
+            font-size: clamp(2.5rem, 6vw, 5rem);
+            font-weight: 700;
+            text-transform: uppercase;
+            letter-spacing: 4px;
+            position: relative;
+            z-index: 2;
+            text-shadow: 0 4px 15px rgba(0,0,0,0.3);
+            animation: subtle-float 4s ease-in-out infinite;
+        }
+
+        @keyframes subtle-float {
+            0%, 100% { transform: translateY(0); }
+            50% { transform: translateY(-10px); }
+        }
+
+        .particle-bg {
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 1;
+            opacity: 0.3;
+            background: 
+                radial-gradient(circle at 20% 30%, rgba(255,255,255,0.1) 0%, transparent 50%),
+                radial-gradient(circle at 80% 70%, rgba(255,255,255,0.1) 0%, transparent 50%);
+        }
+
+        nav ul {
+            display: flex;
+            justify-content: center;
+            list-style-type: none;
+            padding: 0;
+            margin-top: 1rem;
+        }
+
+        nav ul li {
+            margin: 0 1rem;
+        }
+
+        nav a {
+            color: white;
+            text-decoration: none;
+            font-weight: 500;
+            transition: all 0.3s ease;
+        }
+
+        nav a:hover {
+            color: var(--neon-blue);
+            text-shadow: 0 0 10px var(--neon-blue);
+        }
+
+        .hero {
+            padding: 4rem 2rem;
+            text-align: center;
+            background: var(--glass-bg);
+            backdrop-filter: blur(10px);
+            margin: 2rem;
+            border-radius: 15px;
+        }
+
+        .btn {
+            background: var(--neon-blue);
+            color: var(--dark-bg);
+            border: none;
+            padding: 1rem 2rem;
+            font-size: 1rem;
+            border-radius: 50px;
+            cursor: pointer;
+            transition: all 0.3s ease;
+        }
+
+        .btn:hover {
+            background: var(--neon-pink);
+            box-shadow: 0 0 15px var(--neon-pink);
+        }
+
+        .benefits {
+            padding: 4rem 2rem;
+        }
+
+        .content {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 2rem;
+            margin-top: 2rem;
+        }
+
+        .box {
+            background: var(--glass-bg);
+            padding: 2rem;
+            border-radius: 15px;
+            transition: transform 0.3s ease;
+        }
+
+        .box:hover {
+            transform: translateY(-10px);
+        }
+
+        footer {
+            background: linear-gradient(to right, var(--neon-blue), var(--neon-pink));
+            text-align: center;
+            padding: 2rem;
+            margin-top: 2rem;
+        }
+    </style>
 </head>
 <body>
     <header>
+        <div class="particle-bg"></div>
         <h1>Healing with Meditation</h1>
         <nav>
             <ul>
@@ -20,24 +159,24 @@
     </header>
 
     <main>
-        <section class="hero ai-graphic">
+        <section class="hero">
             <h2>Discover Inner Peace Through Meditation</h2>
             <p>Embark on a journey of self-discovery and healing with the transformative power of meditation. Our website provides resources, techniques, and guidance to help you cultivate a calmer mind, reduce stress, and enhance your overall well-being.</p>
-            <button class="btn learn-more">Learn More</button>
+            <button class="btn">Learn More</button>
         </section>
 
-        <section class="benefits section">
+        <section class="benefits">
             <h2>Benefits of Meditation</h2>
             <div class="content">
-                <div class="box fade-in">
+                <div class="box">
                     <h3>Stress Reduction</h3>
                     <p>Meditation helps calm the nervous system, reducing the impact of daily stressors.</p>
                 </div>
-                <div class="box fade-in">
+                <div class="box">
                     <h3>Improved Focus</h3>
                     <p>Regular practice enhances concentration and mental clarity.</p>
                 </div>
-                <div class="box fade-in">
+                <div class="box">
                     <h3>Enhanced Self-Awareness</h3>
                     <p>Meditation deepens your understanding of yourself and your thoughts.</p>
                 </div>
@@ -48,18 +187,5 @@
     <footer>
         <p>&copy; 2025 Healing with Meditation. All rights reserved.</p>
     </footer>
-
-    <script>
-        // Simple script to trigger fade-in animation
-        const fadeElems = document.querySelectorAll('.fade-in');
-        const observer = new IntersectionObserver(entries => {
-            entries.forEach(entry => {
-                if (entry.isIntersecting) {
-                    entry.target.classList.add('visible');
-                }
-            });
-        });
-        fadeElems.forEach(elem => observer.observe(elem));
-    </script>
 </body>
 </html>
