--- a/contact.html
+++ b/contact.html
@@ -24,7 +24,7 @@
     <main>
         <section class="hero">
             <h2>Get in Touch</h2>
-            <p>Have questions? Reach out to us for more information at jonathon.koerner@gmail.com.</p>
+            <p>Have questions? Reach out to us for more information.</p>
         </section>
     </main>
 
