--- a/about.html
+++ b/about.html
@@ -21,11 +21,28 @@
         </nav>
     </header>
 
+     </header>
+
     <main>
-        <section class="hero">
-            <h2>Our Story</h2>
-            <p>Learn about our journey in bringing meditation to the world.</p>
+        <section class="about">
+            <h2>About This Website</h2>
+            <p>Welcome to Healing with Meditation! This website is dedicated to the art and practice of meditation, providing a space for both beginners and experienced meditators to deepen their understanding and explore various techniques.</p>
+            <p>Our mission is to make the transformative power of meditation accessible to everyone. We believe that meditation can be a powerful tool for healing, self-discovery, and cultivating inner peace in today's fast-paced world.</p>
         </section>
+        <section class="content">
+            <h3>What You'll Find Here</h3>
+            <ul>
+                <li><strong>A Variety of Meditation Techniques:</strong> We explore a wide range of meditation practices, from mindfulness and breath awareness to loving-kindness and walking meditation. Each technique is presented with clear instructions and guidance to help you get started.</li>
+                <li><strong>Guidance for Beginners:</strong> If you're new to meditation, our beginner-friendly resources will help you establish a regular practice and understand the fundamentals.</li>
+                <li><strong>Resources for Experienced Meditators:</strong> For those with more experience, we offer deeper insights into the nuances of various techniques, as well as advanced practices to further your journey.</li>
+                <li><strong>A Supportive Community:</strong> We believe in the power of shared experience. Connect with other meditators, share your insights, and find support on your path.</li>
+            </ul>
+        </section>
+        <section class="founder">
+            <h2>About the Founder</h2>
+            <p>This website was created by [Your Name], a dedicated meditation practitioner with a passion for sharing the benefits of this practice with others. [Your Name] has been practicing meditation for [Number] years and has studied various traditions, including [List Traditions]. Their goal is to create a welcoming and informative resource for anyone interested in exploring the world of meditation.</p>
+        </section>
+
     </main>
 
     <footer>
