--- a/about.html
+++ b/about.html
@@ -30,12 +30,10 @@
             <p>Our mission is to make the transformative power of meditation accessible to everyone. We believe that meditation can be a powerful tool for healing, self-discovery, and cultivating inner peace in today's fast-paced world.</p>
             
             <h3>What You'll Find Here</h3>
-            <ul>
-                <li><strong>A Variety of Meditation Techniques:</strong> We explore a wide range of meditation practices, from mindfulness and breath awareness to loving-kindness and walking meditation. Each technique is presented with clear instructions and guidance to help you get started.</li>
-                <li><strong>Guidance for Beginners:</strong> If you're new to meditation, our beginner-friendly resources will help you establish a regular practice and understand the fundamentals.</li>
-                <li><strong>Resources for Experienced Meditators:</strong> For those with more experience, we offer deeper insights into the nuances of various techniques, as well as advanced practices to further your journey.</li>
-                <li><strong>A Supportive Community:</strong> We believe in the power of shared experience. Connect with other meditators, share your insights, and find support on your path.</li>
-            </ul>
+            <p><strong>A Variety of Meditation Techniques:</strong> We explore a wide range of meditation practices, from mindfulness and breath awareness to loving-kindness and walking meditation. Each technique is presented with clear instructions and guidance to help you get started.</p>
+            <p><strong>Guidance for Beginners:</strong> If you're new to meditation, our beginner-friendly resources will help you establish a regular practice and understand the fundamentals.</p>
+            <p><strong>Resources for Experienced Meditators:</strong> For those with more experience, we offer deeper insights into the nuances of various techniques, as well as advanced practices to further your journey.</p>
+            <p><strong>A Supportive Community:</strong> We believe in the power of shared experience. Connect with other meditators, share your insights, and find support on your path.</p>
             
             <h3>About the Founder</h3>
             <p>This website was created by [Your Name], a dedicated meditation practitioner with a passion for sharing the benefits of this practice with others. [Your Name] has been practicing meditation for [Number] years and has studied various traditions, including [List Traditions]. Their goal is to create a welcoming and informative resource for anyone interested in exploring the world of meditation.</p>
