--- a/contact.html
+++ b/contact.html
@@ -25,6 +25,7 @@
         <section class="hero">
             <h2>Get in Touch</h2>
             <p>Have questions? Reach out to us for more information.</p>
+            <p>Feel free to email me at Jonathon.Koerner@gmail.com</p>
         </section>
     </main>
 
