--- a/about.html
+++ b/about.html
@@ -6,6 +6,19 @@
     <title>About - Healing with Meditation</title>
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <style>
+        .about-content p {
+            margin-bottom: 1rem;
+        }
+        .about-content h3 {
+            margin-top: 2rem;
+            margin-bottom: 1rem;
+            color: var(--neon-blue);
+        }
+        .about-content {
+            line-height: 1.6;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -38,7 +51,7 @@
             <p><strong>A Supportive Community:</strong> We believe in the power of shared experience. Connect with other meditators, share your insights, and find support on your path.</p>
             
             <h3>About the Founder</h3>
-            <p>This website was created by Jonathon Koerner, a dedicated meditation practitioner over decades with a passion for sharing the benefits of this practice with others. [Your Name] has been practicing meditation for [Number] years and has studied various traditions, including [List Traditions]. Their goal is to create a welcoming and informative resource for anyone interested in exploring the world of meditation.</p>
+            <p>This website was created by Jonathon Koerner, a dedicated meditation practitioner over decades with a passion for sharing the benefits of this practice with others. Jonathon has been practicing meditation for over 20 years and has studied various traditions, including Zen, Vipassana, and Transcendental Meditation. His goal is to create a welcoming and informative resource for anyone interested in exploring the world of meditation.</p>
         </section>
     </main>
 
