--- a/contact.html
+++ b/contact.html
@@ -21,11 +21,42 @@
         </nav>
     </header>
 
-    <main>
-        <section class="hero">
-            <h2>Get in Touch</h2>
-            <p>Have questions? Reach out to us for more information.</p>
-            <p>Feel free to email me at Jonathon.Koerner@gmail.com</p>
+    <main class="contact-page">
+        <section class="contact-hero">
+            <h2>We're Here to Help</h2>
+            <p>Have questions about meditation? Reach out and connect with us!</p>
+        </section>
+
+        <section class="contact-options">
+            <div class="contact-form">
+                <h3>Send Us a Message</h3>
+                <form>
+                    <input type="text" placeholder="Your Name" required>
+                    <input type="email" placeholder="Your Email" required>
+                    <select>
+                        <option>General Inquiry</option>
+                        <option>Meditation Techniques</option>
+                        <option>Workshop Information</option>
+                        <option>Other</option>
+                    </select>
+                    <textarea placeholder="Your Message" required></textarea>
+                    <button type="submit" class="btn">Send Message</button>
+                </form>
+            </div>
+
+            <div class="contact-info">
+                <h3>Contact Information</h3>
+                <p><strong>Email:</strong> Jonathon.Koerner@gmail.com</p>
+                <p><strong>Phone:</strong> (555) 123-4567</p>
+                <p><strong>Hours:</strong> Monday-Friday, 9 AM - 5 PM EST</p>
+                
+                <div class="social-links">
+                    <h4>Connect with Us</h4>
+                    <a href="#">Instagram</a>
+                    <a href="#">Facebook</a>
+                    <a href="#">Twitter</a>
+                </div>
+            </div>
         </section>
     </main>
 
