--- a/contact.html
+++ b/contact.html
@@ -25,14 +25,17 @@
         <section class="contact-hero">
             <h2>We're Here to Help</h2>
             <p>Have questions about meditation? Reach out and connect with us!</p>
+            <date>Saturday, January 25, 2025, 4 PM EST</date>
         </section>
 
         <section class="contact-options">
             <div class="contact-form">
                 <h3>Send Us a Message</h3>
                 <form>
-                    <input type="text" placeholder="Your Name" required>
-                    <input type="email" placeholder="Your Email" required>
+                    <div class="form-row">
+                        <input type="text" placeholder="Your Name" required>
+                        <input type="email" placeholder="Your Email" required>
+                    </div>
                     <select>
                         <option>General Inquiry</option>
                         <option>Meditation Techniques</option>
