--- a/contact.html
+++ b/contact.html
@@ -1,51 +1,65 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact - Healing with Meditation</title>
-    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
-</head>
-<body>
-    <header>
-        <div class="particle-bg"></div>
-        <h1>Contact Us</h1>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="techniques.html">Techniques</a></li>
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
+.contact-options {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    gap: 2rem;
+    max-width: 1200px;
+    margin: 0 auto;
+}
 
-    <main class="contact-page">
-        <section class="contact-hero">
-            <h2>We're Here to Help</h2>
-            <p>Have questions about meditation? Reach out and connect with us!</p>
-        </section>
+.contact-form {
+    background: var(--glass-bg);
+    padding: 2rem;
+    border-radius: 15px;
+}
 
-        <section class="contact-options">
-            <div class="contact-info">
-                <h3>Contact Information</h3>
-                <p><strong>Email:</strong> Jonathon.Koerner@gmail.com</p>
-                <p><strong>Phone:</strong> (240) 839-9649</p>
-                <p><strong>Hours:</strong> Monday-Friday, 9 AM - 5 PM EST</p>
-                
-                <div class="social-links">
-                    <h4>Connect with Us</h4>
-                    <a href="#">Instagram</a>
-                    <a href="#">Facebook</a>
-                    <a href="#">Twitter</a>
-                </div>
-            </div>
-        </section>
-    </main>
+.contact-form form {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+}
 
-    <footer>
-        <p>&copy; 2025 Healing with Meditation. All rights reserved.</p>
-    </footer>
-</body>
-</html>
+.contact-form input, 
+.contact-form select, 
+.contact-form textarea {
+    width: 100%;
+    padding: 0.75rem;
+    background: rgba(255,255,255,0.1);
+    border: 1px solid var(--neon-blue);
+    color: var(--text-white);
+    border-radius: 8px;
+    transition: all 0.3s ease;
+}
+
+.contact-form input:focus, 
+.contact-form select:focus, 
+.contact-form textarea:focus {
+    outline: none;
+    border-color: var(--neon-pink);
+    box-shadow: 0 0 10px rgba(0, 243, 255, 0.3);
+}
+
+.contact-form textarea {
+    height: 200px;
+    resize: vertical;
+}
+
+.contact-form .btn {
+    align-self: flex-start;
+    margin-top: 1rem;
+}
+
+.contact-form .form-row {
+    display: flex;
+    gap: 1rem;
+}
+
+.contact-form .form-row input {
+    flex: 1;
+}
+
+/* Responsive adjustments */
+@media (max-width: 768px) {
+    .contact-options {
+        grid-template-columns: 1fr;
+    }
+}
